--- a/IT School-ru/IT School/graphic-ru.html
+++ b/IT School-ru/IT School/graphic-ru.html
@@ -63,7 +63,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2 col-md-2">
                         <div class="header-logo">
-                            <a href="index-ru.html"><img src="assets/images/logo.webp" width="80" alt="Logo"></a>
+                            <a href="index.html"><img src="assets/images/logo.webp" width="80" alt="Logo"></a>
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-6 position-static">
@@ -71,7 +71,7 @@
                         <nav class="nav-menus-wrapper">
                             <ul class="nav-menu">
                                 <li>
-                                    <a href="index-ru.html">Главная</a>
+                                    <a href="index.html">Главная</a>
                                 </li>
                                 <li>
                                     <a href="about-us-ru.html">О нас</a>
@@ -92,7 +92,7 @@
                                 <li>
                                     <a href="gallery-ru.html">Галерея</a>
                                 </li>
-                                <li><a href="register-ru.html">Регистрация</a></li>
+                               
                                 <li><a href="contact-ru.html">Контакты</a></li>
                             </ul>
                         </nav>
@@ -618,12 +618,12 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Полезная ссылка</h4>
                             <ul class="link-list">
-                                <li><a href="index-ru.html">Главная</a></li>
+                                <li><a href="index.html">Главная</a></li>
                                 <li><a href="about-us-ru.html">О нас</a></li>
                                 <li><a href="our-courses-3-ru.html">Курсы</a></li>
                                 <li><a href="teachers-ru.html">Учителя</a></li>
                                 <li><a href="gallery-ru.html">Галерея</a></li>
-                                <li><a href="register-ru.html">Регистрация</a></li>
+                               
                             </ul>
                         </div>
                     </div>
