--- a/IT-SCHOOL-WEB-SITE — uzb/teacher-details-uzb.html
+++ b/IT-SCHOOL-WEB-SITE — uzb/teacher-details-uzb.html
@@ -71,13 +71,13 @@
                         <nav class="nav-menus-wrapper">
                             <ul class="nav-menu">
                                 <li>
-                                    <a href="index-uzb.html">Asosiy</a>
+                                    <a href="index.html">Asosiy</a>
                                 </li>
                                 <li>
                                     <a href="about-us-uzb.html">Biz Haqimizda</a>
                                 </li>
                                 <li>
-                                    <a href="our-courses-3-uzb.html">Kurslar</a>
+                                    <a class="active" href="our-courses-3-uzb.html">Kurslar</a>
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="frontend-uzb.html">Frontend</a></li>
                                         <li><a href="backend-uzb.html">Backend</a></li>
@@ -87,13 +87,12 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a class="active" href="teachers-uzb.html">O'qituvchilar</a>
+                                    <a href="teachers-uzb.html">O'qituvchilar</a>
                                 </li>
                                 <li>
                                     <a href="gallery-uzb.html">Rasmlar</a>
                                 </li>
-                                <li><a href="register-uzb.html">Registratsiya</a></li>
-                                <li><a href="contact-uzb.html">Kontaktlar</a></li>
+                                <li><a href="contact-uzb.html">Aloqa</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -328,52 +327,51 @@
     
     <!--====== Footer Start ======-->
 
-    <section class="footer-area bg_cover" style="background-image: url(assets/images/counter-bg.webp);">
+    <footer class="footer-area bg_cover" style="background-image: url(assets/images/counter-bg.webp);">
         <div class="footer-widget">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-link mt-45">
-                            <h4 class="footer-title">Our Centre</h4>
+                            <h4 class="footer-title">Bizning Markaz</h4>
                             <ul class="link-list">
-                                <li><a href="about-us.html">About us</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li><a href="teachers.html">Teachers</a></li>
+                                <li><a href="about-us-uzb.html">Biz Haqimizda</a></li>
+                                <li><a href="gallery-uzb.html">Rasmlar</a></li>
+                                <li><a href="teachers-uzb.html">O'qituvchilar</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-link mt-45">
-                            <h4 class="footer-title">Courses</h4>
+                            <h4 class="footer-title">Kurslar</h4>
                             <ul class="link-list">
-                                <li><a href="frontend.html">Frontend</a></li>
-                                <li><a href="backend.html">Backend</a></li>
-                                <li><a href="graphic.html">Graphic Design</a></li>
-                                <li><a href="foundation.html">Foundation to IT</a></li>
-                                <li><a href="math.html">Mathematics</a></li>
+                                <li><a href="frontend-uzb.html">Frontend</a></li>
+                                <li><a href="backend-uzb.html">Backend</a></li>
+                                <li><a href="graphic-uzb.html">Grafik Dizayner</a></li>
+                                <li><a href="foundation-uzb.html">Kompyuter Savodxonligi</a></li>
+                                <li><a href="math-uzb.html">Matematika</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-link mt-45">
-                            <h4 class="footer-title">Useful Link</h4>
+                            <h4 class="footer-title">Foydali Havola</h4>
                             <ul class="link-list">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about-us.html">About</a></li>
-                                <li><a href="our-courses-3.html">Courses</a></li>
-                                <li><a href="teachers.html">Teachers</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li><a href="shop.html">Shop</a></li>
-                                <li><a href="register.html">Register</a></li>
-                            </ul>
+                                <li><a href="index.html">Bosh Sahifa</a></li>
+                                <li><a href="about-us.html">Biz Haqimizda</a></li>
+                                <li><a href="our-courses-3-uzb.html">Kurslar</a></li>
+                                <li><a href="teachers-uzb.html">O'qituvchilar</a></li>
+                                <li><a href="gallery-uzb.html">Rasmlar</a></li>
+                                <li><a href="shop-uzb.html">Do'kon</a></li>
+                             </ul>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-link mt-45">
-                            <h4 class="footer-title">Contact Info</h4>
+                            <h4 class="footer-title">Aloqa</h4>
                             <ul class="link-list">
                                 <li>
-                                    <p>Address: 35 A, Mirzo Ulugbek street, Samarkand</p>
+                                    <p>Adres: 35 A, Mirzo Ulugbek ko'chasi, Samarkand</p>
                                 </li>
                                 <li>
                                     <p><a href="tel:+998999413030">Tel: +998(99) 941-30-30</a></p>
@@ -404,7 +402,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </footer>
 
     <!--====== Footer Ends ======-->
 
