--- a/IT-SCHOOL-WEB-SITE — uzb/teachers-uzb.html
+++ b/IT-SCHOOL-WEB-SITE — uzb/teachers-uzb.html
@@ -72,7 +72,7 @@
                         <nav class="nav-menus-wrapper">
                             <ul class="nav-menu">
                                 <li>
-                                    <a href="index-uzb.html">Asosiy</a>
+                                    <a href="index.html">Asosiy</a>
                                 </li>
                                 <li>
                                     <a href="about-us-uzb.html">Biz Haqimizda</a>
@@ -93,8 +93,7 @@
                                 <li>
                                     <a href="gallery-uzb.html">Rasmlar</a>
                                 </li>
-                                <li><a href="register-uzb.html">Registratsiya</a></li>
-                                <li><a href="contact-uzb.html">Kontaktlar</a></li>
+                                <li><a href="contact-uzb.html">Aloqa</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -396,13 +395,12 @@
                                 <li><a href="teachers-uzb.html">O'qituvchilar</a></li>
                                 <li><a href="gallery-uzb.html">Rasmlar</a></li>
                                 <li><a href="shop-uzb.html">Do'kon</a></li>
-                                <li><a href="register-uzb.html">Registratsiya</a></li>
                              </ul>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-link mt-45">
-                            <h4 class="footer-title">Kontaktlar</h4>
+                            <h4 class="footer-title">Aloqa</h4>
                             <ul class="link-list">
                                 <li>
                                     <p>Adres: 35 A, Mirzo Ulugbek ko'chasi, Samarkand</p>
